{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 9,
  "lineage": "8e9ce5e5-bdf0-7218-7cf1-516a0aca7426",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "vpctfigw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:864981761345:internet-gateway/igw-0425266d7fd479b39",
            "id": "igw-0425266d7fd479b39",
            "owner_id": "864981761345",
            "tags": {
              "Name": "VPC-TF-IGW"
            },
            "tags_all": {
              "Name": "VPC-TF-IGW"
            },
            "vpc_id": "vpc-0c91c8de9c0c016f8"
          },
          "dependencies": [
            "aws_vpc.vpctf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:864981761345:route-table/rtb-0200a9e5818ea808b",
            "id": "rtb-0200a9e5818ea808b",
            "owner_id": "864981761345",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0425266d7fd479b39",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "routetab"
            },
            "tags_all": {
              "Name": "routetab"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c91c8de9c0c016f8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.vpctfigw",
            "aws_vpc.vpctf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c97a833238f7dba5",
            "route_table_id": "rtb-0200a9e5818ea808b",
            "subnet_id": "subnet-0d28b2966aa760b1f"
          },
          "dependencies": [
            "aws_internet_gateway.vpctfigw",
            "aws_route_table.rt",
            "aws_subnet.Sub1",
            "aws_vpc.vpctf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0096276fc2ee3b797",
            "route_table_id": "rtb-0200a9e5818ea808b",
            "subnet_id": "subnet-0f75307bc0e38958b"
          },
          "dependencies": [
            "aws_internet_gateway.vpctfigw",
            "aws_route_table.rt",
            "aws_subnet.Sub2",
            "aws_vpc.vpctf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sgtf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:864981761345:security-group/sg-0f7d5282f6e2711fb",
            "description": "Allow vpc cidr",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f7d5282f6e2711fb",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/20"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/20"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "securitygroup",
            "name_prefix": "",
            "owner_id": "864981761345",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SecGroupforTF-VPC"
            },
            "tags_all": {
              "Name": "SecGroupforTF-VPC"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c91c8de9c0c016f8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpctf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Sub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:864981761345:subnet/subnet-0d28b2966aa760b1f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d28b2966aa760b1f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "864981761345",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet1"
            },
            "tags_all": {
              "Name": "subnet1"
            },
            "vpc_id": "vpc-0c91c8de9c0c016f8"
          },
          "dependencies": [
            "aws_vpc.vpctf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Sub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:864981761345:subnet/subnet-0f75307bc0e38958b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f75307bc0e38958b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "864981761345",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet2"
            },
            "tags_all": {
              "Name": "subnet2"
            },
            "vpc_id": "vpc-0c91c8de9c0c016f8"
          },
          "dependencies": [
            "aws_vpc.vpctf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpctf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:864981761345:vpc/vpc-0c91c8de9c0c016f8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/20",
            "default_network_acl_id": "acl-070aa52363e4cf624",
            "default_route_table_id": "rtb-036766a3ecb07c5ce",
            "default_security_group_id": "sg-0aac72bf7377a0b1b",
            "dhcp_options_id": "dopt-05b19c2e4c29c11df",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c91c8de9c0c016f8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-036766a3ecb07c5ce",
            "owner_id": "864981761345",
            "tags": {
              "Name": "TFVPC"
            },
            "tags_all": {
              "Name": "TFVPC"
            }
          }
        }
      ]
    }
  ]
}